# meshcore-cli-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  display.rs  error.rs  interactive.rs  main.rs
src/commands/: channels.rs  contacts.rs  device.rs  messaging.rs  mod.rs  repeater.rs
